--- a/views/labs/nuevapelicula.ejs
+++ b/views/labs/nuevapelicula.ejs
@@ -1,14 +1,20 @@
 <%- include('../includes/labs.head.ejs') %>
-<input type="hidden" name="_csrf" value="<%= csrfToken %>" >
-<h1 class="title">Agregar Películas Nuevas</h1>
-<form action="/labs/nuevapelicula" method="POST">
-    <label for="nombre">Nombre: </label>
-    <input id="nombre" name="nombre" class="input" type="varchar" placeholder="Película - año">
-    <br><br>
-    <label for="imagen">Póster </label>
-    <input id="imagen" name="imagen" class="input" type="varchar" placeholder="link">
-    <br><br>
-    <input id="registrar" name="registrar" type="submit" value="Registrar" class="button is-info">
-</form>
+
+<div class="section has-background-grey-dark">
+
+    <h1 class="title is-4">Agregar Películas Nuevas</h1>
+
+    <form action="/labs/nuevapelicula" method="POST">
+        <input type="hidden" name="_csrf" value="<%= csrfToken %>" >
+        <label for="nombre">Nombre: </label>
+        <input id="nombre" name="nombre" class="input" type="varchar" placeholder="Película - año">
+        <br><br>
+        <label for="imagen">Póster:  </label>
+        <input id="imagen" name="imagen" class="input" type="varchar" placeholder="link">
+        <br><br>
+        <input id="registrar" name="registrar" type="submit" value="Registrar" class="button is-info">
+    </form>
+
+</div>
 
 <%- include('../includes/labs.foot.ejs') %>
