Agregar script a tienda

--- a/views/labs/tienda.ejs
+++ b/views/labs/tienda.ejs
@@ -33,15 +33,17 @@
                                 </div>
                             </div>
                         </div>
+                        <script src="/tiendaDOM.js"></script>
+
                 </div>
+                
                 <% } %>
 
             </div>
 
         </div>
         <p class="title is-4">Tiempo desde el último acceso: <%= tiempo_transcurrido %> segundos.</p>
-    </body>
-
+        
 
 
     <%- include('../includes/labs.foot.ejs') %>
