Agregar ejemplo con subir archivos

--- a/views/labs/discos.ejs
+++ b/views/labs/discos.ejs
@@ -14,7 +14,7 @@
                         <div class="media">
                                 <div class="media-left">
                                     <figure class="image is-128x128">
-                                        <img src="<%= disco.imagen%>" alt="<%= disco.nombre%>">
+                                        <img src="/uploads/<%= disco.imagen %>" alt="<%= disco.nombre%>">
                                     </figure>
                                 </div>
                             <div class="media-content">
@@ -25,6 +25,6 @@
                 </div>
             </div>
     <% } %>
-</body>
+
 
 <%- include('../includes/labs.foot.ejs') %>
