--- a/views/labs/peliculas.ejs
+++ b/views/labs/peliculas.ejs
@@ -16,7 +16,7 @@
                             <div class="media">
                                 <div class="media-left">
                                     <figure class="image is-128x128">
-                                        <img src="<%= pelicula.imagen%>"
+                                        <img src="/uploads/<%= pelicula.imagen %>"
                                             alt="<%= pelicula.nombre%>">
                                     </figure>
                                 </div>
