--- a/views/labs/peliculas.ejs
+++ b/views/labs/peliculas.ejs
@@ -16,8 +16,15 @@
                             <div class="media">
                                 <div class="media-left">
                                     <figure class="image is-128x128">
-                                        <img src="/uploads/<%= pelicula.imagen %>"
+                                        <% if(!pelicula.imagen) { %>
+                                            <img src="/uploads/<%= pelicula.imagen%>" 
                                             alt="<%= pelicula.nombre%>">
+
+                                        <% } else { %>
+                                            <img src="<%= pelicula.imagen%>"
+                                                alt="<%= pelicula.nombre%>">
+                                        <% } %>
+                                        
                                     </figure>
                                 </div>
                                 <div class="media-content">
