--- a/views/labs/nuevodisco.ejs
+++ b/views/labs/nuevodisco.ejs
@@ -36,7 +36,7 @@
                 <div class="field">
                     <div class="file has-name">
                         <label class="file-label">
-                            <input class="file-input" type="file" name="imagen">
+                            <input class="file-input" type="file" name="imagend">
                             <span class="file-cta">
                                 <span class="file-icon">
                                     <i class="fas fa-upload"></i>
@@ -65,4 +65,5 @@
         </div>
     </form>
 </div>
+</body>
 <%- include('../includes/labs.foot.ejs') %>
