--- a/views/labs/tienda.ejs
+++ b/views/labs/tienda.ejs
@@ -29,7 +29,7 @@
                                         <button id="boton_seleccion" class="button is-dark">Seleccionar
                                             producto</button>
                                         <figure class="card are-small" id="precio_producto">...</figure>
-                                        <script src="/tiendaDOM.js"></script>
+                                        <script src="/js/tiendaDOM.js"></script>
                                     </div>
                                 </div>
                             </div>
