--- a/views/labs/discos.ejs
+++ b/views/labs/discos.ejs
@@ -1,35 +1,39 @@
 <%- include('../includes/labs.head.ejs') %>
 
-<body class="dark-background">
+    <body class="dark-background">
 
         <a class="icon is-large">
-            <img src="https://images.vexels.com/media/users/3/161230/isolated/preview/1fa58bd038c77c9d668475b9f05126a5-ilustracion-de-banda-de-disco-de-vinilo.png" width="80" height="112">
+            <img src="https://images.vexels.com/media/users/3/161230/isolated/preview/1fa58bd038c77c9d668475b9f05126a5-ilustracion-de-banda-de-disco-de-vinilo.png"
+                width="80" height="112">
         </a>
         <p class="title is-5 has-text-white"> Mis Discos Favoritos</p>
-        <input id="_csrf" type="hidden" name="_csrf" value="<%= csrfToken %>" >
+        <input id="_csrf" type="hidden" name="_csrf" value="<%= csrfToken %>">
 
         <div id="disco">
-    <% for(let disco of discos) { %>
-            <div class="column">
-                <div class="card">
-                    <div class="card-content">
-                        <div class="media">
+            <% for(let disco of discos) { %>
+                <div class="column">
+                    <div class="card">
+                        <div class="card-content">
+                            <div class="media">
                                 <div class="media-left">
                                     <figure class="image is-128x128">
                                         <img src="public/uploads<%= disco.imagend%>" alt="<%= disco.nombre%>">
-                                        <button class="button is-dark" onclick= "async_quitar('<%= disco.id%>')">Quitar</button>
+                                        <button class="button is-dark"
+                                            onclick="async_quitar('<%= disco.id%>')">Quitar</button>
                                     </figure>
                                 </div>
-                            <div class="media-content">
-                                <p class="title is-4"><%= disco.nombre%></p>
+                                <div class="media-content">
+                                    <p class="title is-4">
+                                        <%= disco.nombre%>
+                                    </p>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-    <% } %>
+                <% } %>
         </div>
 
-    <script src="/js/quitar.js"></script>
+        <script src="/js/quitar.js"></script>
 
-<%- include('../includes/labs.foot.ejs') %>
+        <%- include('../includes/labs.foot.ejs') %>
