--- a/views/users/agregar.ejs
+++ b/views/users/agregar.ejs
@@ -1,38 +1,41 @@
 <%- include('../includes/labs.head.ejs') %>
-<div class="section has-background-grey-dark">
-    <h1 class="title is-4">Regístrate. ¡Es gratis!</h1>
-    <h3 class="title is-4">¿Ya tienes una cuenta? <a href="/users/login"> -> Inicia sesión</a></h3>
-    <% if(error) { %>
-        <article class="message is-warning">
-            <div class="message-header">
-                <p>Error en el registro, intentalo de nuevo.</p>
-                <button class="delete" aria-label="delete"></button>
-            </div>
-            <div class="message-body">
-                <strong><%= error.sqlMessage %></strong>.
-            </div>
-        </article>
-    <% } %>
-    <br><br>
-    <form action="/users/agregar" method="POST">
-        <input type="hidden" name="_csrf" value="<%= csrfToken %>" >
-        
-            <div class="field is-small">
-                <label for="nombre">Nombre: </label>
-                <input id="nombre" name="nombre" class="input" type="text" placeholder="Nombre Apellido">
-            </div>
-        <br><br>
-            <div class="field is-small">
-                <label for="username">username: </label>
-                <input id="username" name="username" class="input" type="text" placeholder="nombreusuario">
-            </div>
-        <br><br>
-            <div class="field">
-                <label for="password">password: </label>
-                <input id="password" name="password" class="input is-light is-loading" type="password" placeholder="*****">
-            </div>
-        <br><br>
-        <input class="button is-light" type="submit" value="Registrarse">
-    </form>
-</div>
-<%- include('../includes/labs.foot.ejs') %>
+    <div class="section has-background-grey-dark">
+        <h1 class="title is-4">Regístrate. ¡Es gratis!</h1>
+        <h3 class="title is-4">¿Ya tienes una cuenta? <a href="/users/login"> -> Inicia sesión</a></h3>
+        <% if(error) { %>
+            <article class="message is-warning">
+                <div class="message-header">
+                    <p>Error en el registro, intentalo de nuevo.</p>
+                    <button class="delete" aria-label="delete"></button>
+                </div>
+                <div class="message-body">
+                    <strong>
+                        <%= error.sqlMessage %>
+                    </strong>.
+                </div>
+            </article>
+            <% } %>
+                <br><br>
+                <form action="/users/agregar" method="POST">
+                    <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+
+                    <div class="field is-small">
+                        <label for="nombre">Nombre: </label>
+                        <input id="nombre" name="nombre" class="input" type="text" placeholder="Nombre Apellido">
+                    </div>
+                    <br><br>
+                    <div class="field is-small">
+                        <label for="username">username: </label>
+                        <input id="username" name="username" class="input" type="text" placeholder="nombreusuario">
+                    </div>
+                    <br><br>
+                    <div class="field">
+                        <label for="password">password: </label>
+                        <input id="password" name="password" class="input is-light is-loading" type="password"
+                            placeholder="*****">
+                    </div>
+                    <br><br>
+                    <input class="button is-light" type="submit" value="Registrarse">
+                </form>
+    </div>
+    <%- include('../includes/labs.foot.ejs') %>
