add preguntas lab24

--- a/views/labs/preguntas.ejs
+++ b/views/labs/preguntas.ejs
@@ -495,12 +495,24 @@
                             siendo más mantenible y escalable ya que es una representación muy fiel de los roles en una
                             empresa. Así que el no usar rbac implica que el sistema será más fácil de implementar pero
                             más difícil de mantener conforme crezca o surgan cambios.</p>
+                        <hr>
+                        <div class="question">Preguntas Lab 24 AJAX</div>
+                        <hr>
+                        <div class="question">¿Qué importancia tiene AJAX en el desarrollo de RIA's (Rich Internet Applications)?</div>
+                        <br>
+                        <p> El hecho de que ajax pueda actualizar la pagina sin tener que ser recargada para generar funcionalidades es una de las cosas que ocasionó que ajax empezara un boom de tecnología que ahora casi todas las páginas web pueden hacer. Y cada vez se acercan más las app web a tener el mismo poder funcional que una aplicación de escritorio.</p>
+                        <hr>
+                        <div class="question">¿Qué implicaciones de seguridad tiene AJAX? ¿Dónde se deben hacer las validaciones de seguridad, del lado del cliente o del lado del servidor?</div>
+                        <br>
+                        <p>La vulnerabilidad radica en la consulta de datos y manipulación de funciones desde la consola, así que las pruebas y validaciones combiene hacerlas por el lado del servidor. </p>
+                        <hr>
+                        <div class="question">¿Qué es JSON?</div>
+                        <br>
+                        <p>javascript object notation, sirven para transferir datos a través de la red. Es por medio de una cadena que se hace haciendolo eficiente para el manejo de memoria. Es como el xml pero más fácil de entender (en mi opinión).</p>
+                        <hr>
                 </article>
             </div>
         </section>
-
-
-
         </div>
         </article>
         </div>
@@ -508,4 +520,4 @@
     </body>
     <%- include('../includes/labs.foot.ejs') %>
 
-        </html>
+</html>
