--- a/views/labs/nuevodisco.ejs
+++ b/views/labs/nuevodisco.ejs
@@ -2,7 +2,7 @@
 
     <div class="section has-background-grey-dark">
         <h1 class="title is-4">Agregar Discos Nuevos</h1>
-        <form action="/labs/nuevodisco" method="POST" enctype="multipart/form-data">
+        <form action="/nuevodisco" method="POST" enctype="multipart/form-data">
             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
             <div class="field is-horizontal">
                 <div class="field-label is-normal">
