--- a/views/labs/discos.ejs
+++ b/views/labs/discos.ejs
@@ -36,6 +36,14 @@
             </div>
           </div>
         <%}%>
+        
+        <div class="media-content">
+          <p class="title is-4">
+            Escucha a king gizz con el api de SoundCloud!
+          </p>
+          <iframe width="100%" height="600" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/658488386&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/king-gizzard-the-lizard-wizard" title="King Gizzard &amp; The Lizard Wizard" target="_blank" style="color: #cccccc; text-decoration: none;">King Gizzard &amp; The Lizard Wizard</a> · <a href="https://soundcloud.com/king-gizzard-the-lizard-wizard/mars-for-the-rich" title="Mars For The Rich" target="_blank" style="color: #cccccc; text-decoration: none;">Mars For The Rich</a></div>
+        </div>
+        
     </div>
   </body>
   
