Lab26 listo: agrega preguntas

--- a/views/labs/preguntas.ejs
+++ b/views/labs/preguntas.ejs
@@ -510,6 +510,11 @@
                         <br>
                         <p>javascript object notation, sirven para transferir datos a través de la red. Es por medio de una cadena que se hace haciendolo eficiente para el manejo de memoria. Es como el xml pero más fácil de entender (en mi opinión).</p>
                         <hr>
+                        <div class="question">Preguntas Lab 26 Servicios Web</div>
+                        <hr>
+                        <div class="question">¿Qué ventajas y desventajas tiene la integración de tus aplicaciones web con servicios web desarrollados por terceros?</div>
+                        <br>
+                        <p>La ventaja es que existen actualmente muchos tipos y servicios diferentes que pueden ser consumidos. Pero la desventaja podría ser 1. que es un poco complejo conectar apis dependiendo del sistema, 2. que puede haber muchas restricciones para conectar un api y no vale mucho la pena invertir a menos de que sea algo provechoso. Y por útlimo, creo que las api pueden llegar a fallar, y si tu app depende totalemnte de apis tu página va a dejar de servir.</p>
                 </article>
             </div>
         </section>
